WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46144
When PDF image is directly composited, it does not display
https://bugs.webkit.org/show_bug.cgi?id=46144
Summary
When PDF image is directly composited, it does not display
Simon Fraser (smfr)
Reported
2010-09-20 17:32:13 PDT
When a PDF image hits the "direct compositing" code path (where it's set on the GraphicsLayer as image contents), then the PDF fails to display. <
rdar://problem/7254941
>
Attachments
Patch
(7.08 KB, patch)
2010-09-20 17:36 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-09-20 17:36:27 PDT
Created
attachment 68166
[details]
Patch
Simon Fraser (smfr)
Comment 2
2010-09-20 17:43:11 PDT
http://trac.webkit.org/changeset/67900
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug