2010-09-20  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        When PDF image is directly composited, it does not display
        https://bugs.webkit.org/show_bug.cgi?id=46144

        In the "direct image compositing" code path, we set the image directly
        as the contents of the GraphicsLayer. However, this only works with
        bitmap images, so we have to check that the image is a bitmap image.

        Test: compositing/images/direct-pdf-image.html

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::isDirectlyCompositedImage):

Canonical link: https://commits.webkit.org/58605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67900 268f45cc-cd09-0410-ab3c-d52691b4dbfc